# inflearn-celery-study-silicon-valley

./: Dockerfile  README.md  command.md  docker-compose.yml  pyproject.toml
app/: db.sqlite3
app/app/: settings.py
app/worker/: celery.py  tasks.py
app/worker/celery_tasks/: tasks.py
standalone_celery/: Dockerfile  main.py  pyproject.toml
standalone_celery/worker/: tasks.py
