[tool.poetry]
name = "inflearn-celery-study-silicon-valley"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
djangorestframework = "^3.15.2"
celery = "^5.2.0"
redis = "^5.0.6"
django-celery-beat = "^2.3.0"
django-celery-results = "^2.0.1"
gunicorn = "^22.0.0"
django-extensions = "^3.2.3"
ipython = "^8.25.0"
gevent = "^24.2.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
