[tool.poetry]
name = "inflearn-celery-study-silicon-valley"
version = "0.1.0"
description = ""
authors = ["bluebamus <bluebamus@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.1.5"
celery = "5.3.6"
redis = "^5.0.7"
django-celery-beat = "2.5.0"
django-celery-results = "2.5.1"
gunicorn = "^22.0.0"
django-extensions = "^3.2.3"
ipython = "^8.26.0"
gevent = "^24.2.1"
psycopg2-binary = "^2.9.9"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
